--- a/notebooks/Song_Popularity_Prediction.ipynb
+++ b/notebooks/Song_Popularity_Prediction.ipynb
@@ -1522,7 +1522,9 @@
       "source": [
         "## Results Interpretation\n",
         "\n",
-        "Comparing the performance of the Decision Tree and Neural Network models will give us an indication of which model better predicts the popularity of songs based on our dataset. We'll consider the MSE and R-squared values in our comparison to understand the strengths and weaknesses of each model."
+        "Comparing the performance of the Decision Tree and Neural Network models will give us an indication of which model better predicts the popularity of songs based on our dataset. We'll consider the MSE and R-squared values in our comparison to understand the strengths and weaknesses of each model.\n",
+        "\n",
+        "You can view the results of the analysis in the [Results](Results/Song_Popularity_Prediction_Results.md) file."
       ],
       "metadata": {
         "id": "DIxD7gfuKrE4"
